fixed alignment

--- a/foundation/css/app.css
+++ b/foundation/css/app.css
@@ -46,6 +46,10 @@ h6 {
 	margin-bottom: 0.08rem;
 }
 
+.section{
+	width: 100%;
+}
+
 .section_heading{
 	font-weight: 1;
     margin-top: 5.75rem;
